AMP-197 Storing subscription info in client events db tables. (Part-3)